# create_autonomy

ca_description/launch/: create_description.launch
ca_description/meshes/: last_lens.stl  lens_new.stl  scaled_lens.stl
ca_description/scripts/: robot_spawner.py
ca_description/urdf/: color_sensor.xacro  create_2.xacro  create_apriltag.xacro  create_base.xacro  roomblock.xacro
ca_description/urdf/sensors/: color_sensor.xacro  (+1 more)
ca_gazebo/: CMakeLists.txt  package.xml
ca_gazebo/config/: robots_pose.yaml
ca_gazebo/launch/: create_autorace.launch  create_camera_world.launch  create_corridor.launch  create_empty_world.launch  create_house.launch  create_playground.launch  create_playpen.launch  create_stage_1.launch  create_stage_2.launch  spawn_create.launch  spawn_multirobot.launch
ca_gazebo/src/: color_plugin.cpp  color_sensor_plugin.cpp  toll_plugin.cpp
ca_gazebo/worlds/: autorace.world  camera_world.world
ca_tools/: CMakeLists.txt  package.xml
ca_tools/action/: FollowLine.action  linefollower.action
ca_tools/launch/: action_launch.launch  line_action_client.launch  line_action_server.launch  pos_controller_pid.launch
ca_tools/scripts/: action_client.py  action_server.py  kinematics.py  line_action_client.py  line_action_server.py  line_follower.py  open_cv_node.py  path.py  pos_controller_pid.py  robot_controller.py  robot_state_machine.py
docker/: launch_docker.sh
gazebo_color_plugin/: CMakeLists.txt  package.xml
gazebo_color_plugin/launch/: main.launch
gazebo_color_plugin/src/: color_plugin.cpp
gazebo_color_plugin/worlds/: light.world
(+24 files in other folders)
